// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`monodeploy respects latest version files created outside current working directory 1`] = `
"{
  \\"latestVersions\\": [
    {
      \\"version\\": \\"1.0.1\\",
      \\"name\\": \\"package-0\\"
    },
    {
      \\"version\\": \\"1.0.1\\",
      \\"name\\": \\"package-1\\"
    },
    {
      \\"version\\": \\"1.0.1\\",
      \\"name\\": \\"package-2\\"
    }
  ]
}"
`;

exports[`monodeploy updates the package.json files of the published packages 1`] = `
Object {
  "dependencies": Object {
    "package-1": "^1.0.2",
  },
  "name": "package-0",
  "version": "1.0.2",
}
`;

exports[`monodeploy updates the package.json files of the published packages 2`] = `
Object {
  "dependencies": Object {
    "package-2": "^1.0.1",
  },
  "name": "package-1",
  "version": "1.0.2",
}
`;

exports[`monodeploy updates the package.json files of the published packages 3`] = `
Object {
  "name": "package-2",
  "version": "1.0.1",
}
`;

exports[`monodeploy writes a latest versions file if name is given 1`] = `
"{
  \\"latestVersions\\": [
    {
      \\"version\\": \\"1.0.1\\",
      \\"name\\": \\"package-0\\"
    },
    {
      \\"version\\": \\"1.0.1\\",
      \\"name\\": \\"package-1\\"
    },
    {
      \\"version\\": \\"1.0.1\\",
      \\"name\\": \\"package-2\\"
    }
  ]
}"
`;
